<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:title="@string/save_button_text"
        android:icon="@drawable/save_24px"
        app:showAsAction="ifRoom"
        app:iconTint="@android:color/white"/>

    <item
        android:id="@+id/action_cancel"
        android:title="@string/cancel_button_text"
        android:icon="@drawable/close_24px"
        app:showAsAction="never"
        app:iconTint="@android:color/white"/>

    <item
        android:id="@+id/action_reset"
        android:title="@string/reset_button_text"
        android:icon="@drawable/delete_24px"
        app:showAsAction="never"
        app:iconTint="@android:color/white"/>
</menu>