<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contactCoordinatorLayout">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageButton
                android:id="@+id/toolbar_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/close_contact_information_activity"
                android:padding="8dp"
                android:src="@drawable/close_24px" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/toolbar_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/toolbar_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/save_button_text"
                android:textColor="@android:color/white" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/person_icon_title"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/person_24px" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutEditFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_first_name_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="firstname" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayoutEditLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_last_name_hint"
                android:paddingStart="40dp"
                android:paddingEnd="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/phone_icon_title"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/phone_24px" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutEditPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_phone_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/mail_icon_title"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/mail_24px" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutEditEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_email_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/address_icon_title"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/location_24px" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutEditPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_address_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPostalAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="postalAddress"
                        android:inputType="textPostalAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/birthday_icon_title"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/birthday_24px" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutEditBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_birthday_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="birthday"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2000dp"
                android:padding="16dp"
                android:text="Scrollable Content"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>